[gd_scene load_steps=25 format=2]

[ext_resource path="res://Assets/adventurer-idle-2-00.png" type="Texture" id=1]
[ext_resource path="res://Assets/adventurer-idle-2-01.png" type="Texture" id=2]
[ext_resource path="res://Assets/adventurer-idle-2-02.png" type="Texture" id=3]
[ext_resource path="res://Assets/adventurer-idle-2-03.png" type="Texture" id=4]
[ext_resource path="res://Scripts/player/player_state_machine.gd" type="Script" id=5]
[ext_resource path="res://Scripts/player/player.gd" type="Script" id=6]
[ext_resource path="res://Scripts/player/states/on_ground/idle.gd" type="Script" id=7]
[ext_resource path="res://Scripts/player/states/on_ground/move.gd" type="Script" id=8]
[ext_resource path="res://Assets/adventurer-run-04.png" type="Texture" id=9]
[ext_resource path="res://Assets/adventurer-run-00.png" type="Texture" id=10]
[ext_resource path="res://Assets/adventurer-run-02.png" type="Texture" id=11]
[ext_resource path="res://Assets/adventurer-run-03.png" type="Texture" id=12]
[ext_resource path="res://Assets/adventurer-run-01.png" type="Texture" id=13]
[ext_resource path="res://Assets/adventurer-run-05.png" type="Texture" id=14]
[ext_resource path="res://Scripts/player/states/combat/slash_attack.gd" type="Script" id=15]
[ext_resource path="res://Assets/adventurer-attack1-00.png" type="Texture" id=16]
[ext_resource path="res://Assets/adventurer-attack1-01.png" type="Texture" id=17]
[ext_resource path="res://Assets/adventurer-attack1-02.png" type="Texture" id=18]
[ext_resource path="res://Assets/adventurer-attack1-04.png" type="Texture" id=19]
[ext_resource path="res://Assets/adventurer-attack1-03.png" type="Texture" id=20]
[ext_resource path="res://Scripts/attack_area.gd" type="Script" id=21]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 14 ) ],
"loop": true,
"name": "move",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 19 ) ],
"loop": false,
"name": "slash_attack",
"speed": 30.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.0
height = 14.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.75, 15 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 6 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="SlashAttack" type="Node" parent="StateMachine"]
script = ExtResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 2 )

[node name="AttackArea" type="StaticBody2D" parent="."]
constant_linear_velocity = Vector2( 500, 200 )
script = ExtResource( 21 )

[node name="AttackAreaCollision" type="CollisionPolygon2D" parent="AttackArea"]
polygon = PoolVector2Array( -3, -14, 2, -17, 14, -17, 23, -9, 23, 4, 12, 13, 1, 13, 12, 3, 12, -4 )

[node name="AttackAreaDetect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackAreaDetect"]
visible = false
position = Vector2( 15.25, -2 )
shape = SubResource( 3 )

[connection signal="animation_finished" from="AnimatedSprite" to="StateMachine" method="_on_AnimatedSprite_animation_finished"]
